Added more validation and Added sanitizer
