# cmd/docs/swagger.yaml
@@ -1,7 +1,54 @@
 consumes:
 - application/json
 definitions:
-  oauth.ClientRegistrationRequest:
+  oauth.Jwks:
+    properties:
+      alg:
+        description: Algorithm to be used with the key
+        type: string
+      key_ops:
+        description: "Identifies operation(s) for which the key is intended to be
+          used and should NOT be used with the \"use\" field\n\to  \"sign\" (compute
+          digital signature or MAC)\n\to  \"verify\" (verify digital signature or
+          MAC)\n\to  \"encrypt\" (encrypt content)\n\to  \"decrypt\" (decrypt content
+          and validate decryption, if applicable)\n\to  \"wrapKey\" (encrypt key)\n\to
+          \ \"unwrapKey\" (decrypt key and validate decryption, if applicable)\n\to
+          \ \"deriveKey\" (derive key)\n\to  \"deriveBits\" (derive bits not to be
+          used as a key)"
+        items:
+          type: string
+        type: array
+      kid:
+        description: Used to match a specific key
+        type: string
+      kty:
+        description: |-
+          Cryptographic Algorithm
+          e.g. "RSA" or "EC"
+        type: string
+      use:
+        description: |-
+          Intended use of public key (encrypting or verifying signature) and should NOT be used with the "key_ops" field
+          e.g. "sig" or "enc"
+        type: string
+      x5c:
+        description: Contains chain of 1+ PKIX certificates represented as JSON array
+          of certificate value strings
+        type: string
+      x5t:
+        description: Base64 Url encoded SHA-1 thumbprint (digest) of the DER encoding
+          of X509 Certificate
+        type: string
+      x5t#S256:
+        description: Base64 Url encoded SHA-256 thumbprint (digest) of the DER encoding
+          of X509 Certificate
+        type: string
+      x5u:
+        description: Refers to a resource for an X509 public key certificate or certificate
+          chain
+        type: string
+    type: object
+  oauth.PutOAuthClientRequest:
     properties:
       client_name:
         type: string
@@ -18,7 +65,7 @@ definitions:
           type: string
         type: array
       jwks:
-        type: string
+        $ref: '#/definitions/oauth.Jwks'
       jwks_uri:
         type: string
       logo_uri:
@@ -29,11 +76,9 @@ definitions:
         items:
           type: string
         type: array
-      response_types:
+      response_type:
         description: code (default), token
-        items:
-          type: string
-        type: array
+        type: string
       scope:
         type: string
       software_id:
@@ -42,12 +87,21 @@ definitions:
         type: string
       token_endpoint_auth_method:
         description: |-
-          Values
-          none - public client aka no secret
+          none - public client
           client_secret_post - uses http post params
           client_secret_basic - uses http basic
         type: string
       tos_uri:
+        type: string
+    required:
+    - client_name
+    - grant_types
+    type: object
+  responses.ApiError:
+    properties:
+      error:
+        type: string
+      error_code:
         type: string
     type: object
   responses.HealthResponse:
@@ -55,6 +109,13 @@ definitions:
       success:
         type: boolean
       time:
+        type: string
+    type: object
+  responses.PutOAuthClientResponse:
+    properties:
+      client_id:
+        type: string
+      client_secret:
         type: string
     type: object
 info:
@@ -75,15 +136,23 @@ paths:
       tags:
       - Health
   /athena/v1/oauth/clients:
-    post:
+    put:
       parameters:
       - description: Body to create a client
         in: body
         name: request
         required: true
         schema:
-          $ref: '#/definitions/oauth.ClientRegistrationRequest'
-      responses: {}
+          $ref: '#/definitions/oauth.PutOAuthClientRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.PutOAuthClientResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.ApiError'
       summary: Create an OAuth Client
       tags:
       - OAuth Client
