# pkg/controllers/oauthClientController.go
@@ -3,6 +3,7 @@ package controllers
 import (
 	"Olympus-Athena/pkg/requests/oauth"
 	"Olympus-Athena/pkg/responses"
+	"Olympus-Athena/pkg/sanitizers"
 	"Olympus-Athena/pkg/validators"
 	"crypto/rand"
 	"encoding/base64"
@@ -18,42 +19,40 @@ func NewOAuthClientController() *OAuthClientController {
 	return &OAuthClientController{}
 }
 
-// RegisterClient godoc
+// PutClient godoc
 // @Summary Create an OAuth Client
 // @Tags OAuth Client
-// @Param request body oauth.ClientRegistrationRequest true "Body to create a client"
-// @Router /athena/v1/oauth/clients [post]
-func (o OAuthClientController) RegisterClient(ctx *fiber.Ctx) error {
-	var request oauth.ClientRegistrationRequest
+// @Param request body oauth.PutOAuthClientRequest true "Body to create a client"
+// @Success 200 {object} responses.PutOAuthClientResponse
+// @Failure 400 {object} responses.ApiError
+// @Router /athena/v1/oauth/clients [put]
+func (o OAuthClientController) PutClient(ctx *fiber.Ctx) error {
+	var request oauth.PutOAuthClientRequest
 	err := ctx.BodyParser(&request)
 	if err != nil {
 		slog.Error("Couldn't parse body", "error", err)
-		return ctx.Status(fiber.StatusBadRequest).JSON(&responses.ApiError{
-			Error: err.Error(),
-		})
+		return BadRequest(ctx, responses.ParseToApiError(err))
 	}
 
-	err = validators.ValidateClientRegistrationRequest(&request)
-	if err != nil {
-		return ctx.Status(fiber.StatusBadRequest).JSON(&responses.ApiError{
-			Error: err.Error(),
-		})
+	sanitizers.SanitizePutOAuthClientRequest(&request)
+
+	vErr := validators.ValidatePutOAuthClientRequest(&request)
+	if vErr != nil {
+		return BadRequest(ctx, responses.NewApiError(vErr))
 	}
 
 	randomBytes := make([]byte, 128)
 	_, err = rand.Read(randomBytes)
 	if err != nil {
 		slog.Error("Couldn't create secret", "Error", err)
-		return ctx.Status(fiber.StatusBadRequest).JSON(&responses.ApiError{
-			Error: err.Error(),
-		})
+		return BadRequest(ctx, responses.ParseToApiError(err))
 	}
 
 	clientId := uuid.New()
 	secret := base64.URLEncoding.EncodeToString(randomBytes)
 
-	return ctx.Status(fiber.StatusOK).JSON(fiber.Map{
-		"client_id": clientId,
-		"secret":    secret,
+	return Ok(ctx, responses.PutOAuthClientResponse{
+		ClientId:     clientId,
+		ClientSecret: secret,
 	})
 }
